--- a/labs/rbac.adoc
+++ b/labs/rbac.adoc
@@ -2,7 +2,7 @@
 
 *This chapter will introduce the attendee to the concepts around the Role Based Access Control model integrated into OpenShift. This will cover the use of Users, Service Accounts and Permissions.*
 
-NOTE: For the majority of this chapter the attendee will need to pair up with another. If the numbers are odd the presenter should fill the gap of the missing attendee - pair the attendees up before the chapter starts and get them to exchange numbers - your partner's username, and enter this whererever it says PARTNERUSERNAME below.
+NOTE: For the majority of this chapter the attendee will need to pair up with another. If the numbers are odd the presenter should fill the gap of the missing attendee - pair the attendees up before the chapter starts and get them to exchange numbers - your partner's username, and enter this whererever it says (PARTNERUSERNAME) below.
 
 If you are not already logged on go to the UI URL {{OPENSHIFT_CONSOLE_URL}}[{{OPENSHIFT_CONSOLE_URL}}, window="_blank"] and logon as '{{USER_ID}}' and password openshift. 
 
@@ -36,13 +36,15 @@ Switch to the Developer view using the top left pulldown
 
 In the Topology Tab click on ‘From Catalog’
 
-In the search box enter ‘node’. Select the Node.js option
+In the search box enter ‘node’. Select the Node.js option (Builder Image)
 
 Click ‘Create Application’
 
-Default the image to version 10
+Default the Builder Image Version to version 12
 
 For the git repo enter ‘https://github.com/utherp0/nodenews’
+
+Insure the UI displays 'Validated' beneath the URL textbox when you unfocus. If it doesn't check the URL
 
 Set the Application Name to ‘rbac’
 
@@ -64,13 +66,15 @@ Click on User Management/Role Bindings
 
 image::rbac-2.png[Admin Role]
 
-TIP: Note that we have one Role Binding shown at the moment, which is for Admin and applies to a kind of 'user' and a subject name of '{{USER_ID}}'. This is the binding of your user to the administration role within the project.
+TIP: Note that we have a number of Role Bindings shown at the moment; we are interested in the 'Admin' RoleBindibg which is for Admin and applies to a kind of 'user' and a subject name of '{{USER_ID}}'. This is the binding of your user to the administration role within the project.
 
-Click on the 'System Role Bindings'
+Set the filter for the tab to show only the 'System Role Bindings'
 
 image::rbac-3.png[System Role Bindings]
 
-TIP: Note that with the addition of System Role Bindings to the screen we can now see the three Service Accounts also created. Deployer is part of the system:deployers binding, builder is part of the system:image-builders binding and the group of users under system:serviceaccounts:rbactest-{{USER_ID}} have the system:image-pullers binding.
+TIP: Note that with the filter for System Role Bindings we can now see the three Service Accounts also created. Deployer is part of the system:deployers binding, builder is part of the system:image-builders binding and the group of users under system:serviceaccounts:rbactest-{{USER_ID}} have the system:image-pullers binding.
+
+Remove the filter by clicking on the cross next to it
 
 Click on the (CR) admin Role Ref
 
@@ -84,7 +88,7 @@ Click on 'Create Binding'
 
 Set Name to ‘partneraccess’
 
-Select ‘rbactest-{{USER_ID}}’ from the Namespace pulldown; it should be the only one.
+Select ‘rbactest-{{USER_ID}}’ from the Namespace pulldown. 
 
 *As a user with the admin role within the namespace/project you can add other users with role bindings within your project.*
 
@@ -92,7 +96,7 @@ Select ‘Admin’ in the Role Name pulldown
 
 Ensure ‘User’ is selected in the radiobox for Subject
 
-Enter ‘userPARTNERUSER’ for the Subject Name
+Enter ‘user(PARTNERUSER)’ for the Subject Name
 
 *What we are doing is adding the user you have chosen to pair with as an admin role binding within your project.*
 
@@ -104,7 +108,7 @@ Click on Home/Projects
 
 *If the partner user has set the role binding appropriately you will now see two projects - your own and the other person's*
 
-Click on the partner’s project (rbactest_PARTNERUSERNAME)
+Click on the partner’s project (rbactest_(PARTNERUSERNAME) )
 
 Change to the Developer view using the top left selection point
 
@@ -150,7 +154,7 @@ Ensure the partner has done the same with your {{USER_ID}}
 
 Click on 'Home/Projects'
 
-Select the partner project (rbactest_PARTNERUSERNAME)
+Select the partner project (rbactest_(PARTNERUSERNAME) )
 
 In the Project overview pane click on Role Bindings
 
@@ -168,7 +172,7 @@ Click on 'Home/Projects'
 
 In the triple dot menu next to the rbactest_PARTNERUSERNAME select ‘Delete Project’
 
-Type ‘rbactest_PARTNERUSERNAME’ in the message box and press ‘Delete’
+Type ‘rbactest_(PARTNERUSERNAME)’ in the message box and press ‘Delete’
 
 NOTE: Note that you cannot delete the other persons project.
 
