--- a/labs/camelkocpserverlesseventing.adoc
+++ b/labs/camelkocpserverlesseventing.adoc
@@ -8,7 +8,7 @@ OpenShift Serverless, based on Knative is the serverless technology that was int
 
 OpenShift Serverless supports "Serving" and "Eventing"
 
-At the time of writing, Serving is in Technology Preview, and Eventing is in Developer Preview
+At the time of writing, Eventing is in Technology Preview
 
 "Serving" enables request/response workloads, and Eventing enables asynchronous event based workloads using cloudevents. 
 
@@ -122,11 +122,13 @@ kamel run printer.groovy
 
 First go to the Administrator view in the OpenShift console - at the top left make sure the view is set to Administrator
 
-Go to Workloads/Pods. As you are using a single namespace for the workshop this should display the active Pods in sandboxX, where X is your user number
+Go to Workloads/Pods. As you are using a single namespace for the workshop this should display the Pods in sandboxX, where X is your user number
 
-Watch as the integrations are created using builder and deployment containers. This may take a little while. 
+Watch as the integrations are created using builder and deployment containers. This may take a little while. Your screen with eventually look simlar to the one below.
 
 image::camekknative-11.png[Containers building]
+
+TIP: The screenshot above shows you pods in all their states e.g. completed, running, terminated etc. To just view the running pods, click on "filter" (top left hand side of the table listing the pods) and check the box "running"
 
 Once it has finished deploying the integrations you will have three Pods active as shown similar to the screenshot below (ignore the devex Pod, this is your terminal Pod)
 
@@ -138,29 +140,15 @@ Now that all 3 of the Integrations are deployed, the topology view should look l
 
 image::camekknative-5.png[Integrations running]
 
-TIP: The Knative service is represented by the square box. You should see 2 of these in the topology view. On the OpenShift red logo in the middle of the service you will see the Knative "K" logo. You definitely know that you have a Knative service now. You will also notice an artefact called "KSVC", this is the Knative Service defined to OpenShift. There is also an artefact called "REV", this is the Knative revision that is current running. Revisions can be used to implement a Canary Release strategy. The diagram shows that 100% of the traffic is routed to the revision shown on the topology view. If you click on one of the "KSVC" on the topology view you will see an option to set the traffic distribution
+TIP: The Knative service is represented  by the name "KSVC" and "REV". You should see 2 of these in the topology view. On each of the Knative Services you will see the Knative "K" logo just to the left of the letters "KSVC". You definitely know that you have a Knative service now.  "KSVC" is the Knative Service defined to OpenShift. The artefact called "REV", is the Knative revision that is current running. Revisions can be used to implement a Canary Release strategy. The diagram shows that 100% of the traffic is routed to the revision shown on the topology view. If you click on one of the "KSVC" on the topology view you will see an option to set the traffic distribution
 
 Each of the integrations is producing log information. 
 
-At the time of writing, there is no easy way to view the pod log files of a knative service in the console, so in the developer view click on Advanced/Project Details and choose Workloads
+Lets view the logs of each of the running integrations. To view a log, simple click inside any of the square boxes. You should see a screen similar to the one below.
 
 image::camekknative-6.png[Viewing overview of running Integration]
 
-For each workload, you should see a '1 of 1 pods' on the right hand side. 'Click' on the '1 of 1 pods'.
-
-You should see a screen similar to the one below
-
-image::camekknative-7.png[Running Pod]
-
-'Click' on the Pod name on the left e.g. printer-xxxxxxxxxxxx
-
-This should show you a screen similar to the one below
-
-image::camekknative-8.png[Pod Details]
-
-'Click' on 'Logs' to view the log for the pod. It should look something like the one below
-
-image::camekknative-9.png[Pod Details]
+Click on "View Logs" to see the log for the integration
 
 Repeat the steps above for the other Integrations if you like.
 
