--- a/labs/metrics.adoc
+++ b/labs/metrics.adoc
@@ -37,21 +37,21 @@ Once the Project has created you should be taken to the Project Details tab. Sel
 
 image::events1.png[Events tab empty]
 
-Click on Home/Events. The resulting screen should look like:
-
-image::events2.png[No events yet]
-
 Now we will add an application to the project. Switch to the Developer view by clicking on Administrator and selecting Developer.
 
-Click on +Add. Choose 'From Catalog'. Enter *node* in the search box. Click on the 'node.js' template (the wording is something like 'Build and run node.js 10').
+Click on +Add. Choose 'From Catalog'. Enter *node* in the search box. Click on the 'node.js' Builder Image
 
 Click 'Create Application'. In the 'Git Repo URL' textbox enter https://github.com/utherp0/workshop4
 
-Click on 'Advanced Git Options' - you may have to click it twice; removing context from the git repo URL textbox validates the URL (make sure it indicates that the URL is valid, if not check the text given above).
+Insure the text 'Validated' appears beneath the textbox. If it doesn't check the URL
+
+Click on 'Advanced Git Options'
 
 In the Context Dir textbox enter /apps/nodeatomic
 
-Scroll down to the *General* section. Set the 'Application Name' to 'events-app'. Set the 'Name' to 'nodeatomic'
+Scroll down to the *General* section. Set the 'Application Name' to 'events-app'. 
+
+Set the 'Name' to 'nodeatomic'
 
 Scroll down to the *Resources* section. Select 'Deployment Config'.
 
@@ -71,9 +71,11 @@ Now in the pulldown box at the top left of the events set the resource to Build 
 
 image::events4.png[build events only]
 
-Now click in the pulldown box at the top left of the events. In the textbox where it says 'Select Resource' type 'pod'. From the selection in the pulldown choose 'Pod'. 
+Now click in the pulldown box at the top left of the events. In the textbox where it says 'Select Resource' type 'pod'. From the selection in the pulldown choose 'Pod'. Remove the 'Build' filter 
 
-Pause the event stream again.
+Pause the event stream again. It should look like this:
+
+image::events4b.png[pod events paused]
 
 Switch to your terminal app window (the command line interface described in the prerequisites). type the following:
 
@@ -111,7 +113,11 @@ The current CPU consumption for the Pod in question. This can be limited by asmi
 The current file access consumption. This is expressed in KiB by default.
 ****
 
-In the Administration view click on Workloads/Pods. Select the topmost Pod and click on its name. The Pod Details tab will display the current metrics for the Pod. 
+In the Administration view click on Workloads/Pods. 
+
+Set the filter at the top left of the page to 'Running'
+
+Select the topmost Pod and click on its name. The Pod Details tab will display the current metrics for the Pod. 
 
 image::events6.png[Example Pod metrics]
 
@@ -155,7 +161,7 @@ For example, if you had three Pods running 'myapp' you could search for any erro
 
 ==== Examining Logs using the OCP UI
 
-Switch to the Developer view and then to the topology view. You should have one copy of the Application running (one Pod). Click on the Pod to show the DC tab on the right side of the page. Now click on Resources to list the Pods.
+Switch to the Developer view and then to the topology view. You should have one copy of the Application running (one Pod). Click on the Pod to show the DC tab on the right side of the page. Now click on Resources if it doesn't display that to list the Pods.
 
 On the Pod icon click the URL icon (top right). This will open another tab with the output of the Application in it. Switch back to the OpenShift interface and click on 'View Logs', situated to the right of the single Pod in the DC tab.
 
@@ -165,7 +171,7 @@ Add /log to the end of the URL and hit return. The page should change to a simpl
 
 Switch back to the OpenShift interface. The log will now have twenty log messages (count 0 to count 19) displayed.
 
-Click on Topology. Click on the Pod to bring up the DC tab. Click on Overview.
+Click on Topology. Click on the Pod to bring up the DC tab. Click on Details.
 
 We are going to scale the Application to two copies; click on the up arrow displayed next to the Pod indicator *once*. Click on Resources and make sure there are now two copies of the Application running.
 
