--- a/labs/applicationdeploymentstrategies.adoc
+++ b/labs/applicationdeploymentstrategies.adoc
@@ -4,7 +4,7 @@ Author: Mark Roberts (feedback to mroberts@redhat.com)
 
 *DevOps is a much overloaded term that is used to describe a variety of concepts in the creation of modern applications. In a simple definition DevOps is concerned with the interface between development practices used for the creative elements of software engineering and the procedural rigour of operationally running applications in production. Clearly these concepts have different objectives so it is important for teams (whether tasked with development or operations) to have a good understanding of the concepts, objectives and concerns of their counterparts on the other side of the fence.*
 
-*In terms of this workshop it is important to highlight the  capabilities of containerized platforms with respect to the roll out of new versions of applications and how they get introduced to production and to end users. Terms such as blue/green deployments, black and white deployments, A/B deployments and canary deployments are used in various text books on 'DevOps' principles and some of these areas will be used in this chapter of the workshop.*
+*In terms of this workshop it is important to highlight the capabilities of containerized platforms with respect to the roll out of new versions of applications and how they get introduced to production and to end users. Terms such as blue/green deployments, black and white deployments, A/B deployments and canary deployments are used in various text books on 'DevOps' principles and some of these areas will be used in this chapter of the workshop.*
 
 The activities in this workshop will introduce a new version of a simple application to use in two different manners.
 
@@ -286,11 +286,10 @@ This will result in a new route being created and the hostname will be displayed
 adventure-holiday-myholiday_user2.apps.cluster-c2d5.c2d5.example.opentlc.com
 ----
 
-The element of the path that we need for the new common hostname is from the .apps part forward, and a new part will be created to replace 'adventure-holiday-myholiday_user2' based on the project name. A shell script is used to configure the four route creation yaml files which are downloaded from the workshop git repository. If you have not already done so clone the git repository using the command below and then switch directory and examine one of the yaml files.
+The element of the path that we need for the new common hostname is from the .apps part forward, and a new part will be created to replace 'adventure-holiday-myholiday_user2' based on the project name. A shell script is used to configure the four route creation yaml files which are stored in the workshop git repository. Switch directory and examine one of the yaml files.
 
 [source]
 ----
-git clone https://github.com/utherp0/workshop4.git
 cd workshop4/attendee/myholiday
 cat adventure-route.yaml
 ----
@@ -391,7 +390,7 @@ curl <common-url>/short-break
 
 ==== Cleaning up
 
-From the OpenShift browser window click on 'Advanced' and then 'Projects' on the left hand side menu.
+From the OpenShift browser window click on 'Administrator' and then 'Projects' on the left hand side menu.
 
 In the triple dot menu next to your own project (simple-rest-{{USER_ID}}) select ‘Delete Project’
 Type ‘simple-rest-{{USER_ID}}’ such that the Delete button turns red and is active.
