return to workshop portal in same tab

--- a/labs/linkback.adoc
+++ b/labs/linkback.adoc
@@ -1,1 +1,1 @@
-To get back to the Workshop Portal, click {{USERNAME_URL}}[here, window="_blank"]
+To get back to the Workshop Portal, click {{USERNAME_URL}}[here]
